--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,10 +11,12 @@
   background-color: yellow;
   padding: 0.5em;
   margin-top: 1em;
+  text-align: center;
 }
 
 .bg-green {
   background-color: green;
   padding: 0.5em;
   margin-top: 1em;
+  text-align: center;
 }
